Enhance Docker setup for cross-platform compatibility; specify platform in docker-compose.yml and update documentation for resource limits and platform support

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      platform: linux/amd64
     ports:
       - "3000:3000"
     environment:
