Refactor Docker setup for production; update Dockerfile to install only production dependencies, modify docker-compose files for improved configuration, and simplify next.config.mjs

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -13,7 +13,7 @@ services:
     volumes:
       # Mount source code for hot reloading
       - .:/app
-      - /app/node_modules
+      # - /app/node_modules
       - /app/.next
     restart: unless-stopped
     deploy:
